fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,11 @@
 
 html {
   font-size: 16px;
+  overflow-x: hidden !important;
 }
 
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 @media (max-width: 992px) {
